--- a/res/layout/activity_failurehistory.xml
+++ b/res/layout/activity_failurehistory.xml
@@ -53,10 +53,10 @@
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content" 
                 android:scrollingCache="false" 
-                android:cacheColorHint="#00000000"
-                android:divider="#d8d8d8d8"
+                android:cacheColorHint="@color/white"
+                android:divider="@color/gray"
                 android:dividerHeight="2dp"
-                android:background="#ffffff" ></ListView>
+                android:background="@color/white" ></ListView>
        	</LinearLayout>
        	<RelativeLayout 
        	    android:layout_width="fill_parent"
