--- a/res/layout/activity_failurehistory_listview.xml
+++ b/res/layout/activity_failurehistory_listview.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="102dp"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical" >
      <TextView
         android:id="@+id/F_list_work"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:singleLine="false"
         android:gravity="left"
-        android:textSize="14pt" />
+        android:text="缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷缺陷"
+        android:textColor="@color/black"
+        android:textSize="12pt" />
    	<TextView 
    	    android:id="@+id/F_list_time"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
+   	    android:layout_marginTop="8dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
    	    android:gravity="left"
+   	    android:text="2013-3-13"
+   	    android:textColor="@color/dark_gray"
    	    android:textSize="7pt"/>
 
 </LinearLayout>
