--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -25,8 +25,10 @@
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:background="@drawable/home_labte_bg"
-                android:textColor="#ffffffff"
-                android:textSize="20.0dip" />
+                android:textColor="@color/white"
+                android:text="张三"
+                android:textStyle="bold"
+                android:textSize="11pt" />
             
         </LinearLayout>
         <Button
@@ -66,8 +68,9 @@
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content" 
                 android:scrollingCache="false" 
-                android:cacheColorHint="#00000000"
-                android:divider="#ffd8d8d8" ></ListView>
+                android:cacheColorHint="@color/white"
+                android:divider="@color/gray"
+                android:dividerHeight="2dp" ></ListView>
          
         </LinearLayout>
     
