--- a/res/layout/activity_taskdetails_listview.xml
+++ b/res/layout/activity_taskdetails_listview.xml
@@ -6,24 +6,24 @@
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
-         android:background="#ffffff"
+         android:background="@color/white"
          android:id="@+id/T_linear"
          android:orientation="vertical">
 	     <RelativeLayout
 	        android:layout_width="fill_parent"
-	        android:layout_height="50dp" 
-	        android:paddingLeft="5dip"
-	        >
+	        android:layout_height="wrap_content" 
+	        android:paddingLeft="5dip">
 
 	    	<TextView
 		        android:id="@+id/T_list_device"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:layout_alignParentLeft="true"
-		        android:layout_centerVertical="true"
+		        android:layout_marginTop="10dp"
 		        android:gravity="left"
-		        android:text="@string/task_name"
-		        android:textSize="10pt" />
+		        android:text="设备1"
+		        android:textSize="11pt"
+		        android:textColor="@color/black" />
 	    	<TextView
 	            android:id="@+id/T_list_type"
 	            android:layout_width="wrap_content"
@@ -33,22 +33,27 @@
 	            android:layout_alignParentRight="true"
 	            android:gravity="right"
 	            android:textSize="8pt" 
-	            android:text="TextView" />
+	            android:textColor="@color/black"
+	            android:text="变压器" />
 
 		</RelativeLayout>
     	<RelativeLayout
 	        android:layout_width="fill_parent"
-	        android:layout_height="50dp" >
+	        android:layout_height="wrap_content" >
 	        <TextView
 	            android:id="@+id/T_list_address"
 	            android:layout_width="fill_parent"
 	            android:layout_height="wrap_content"
+	            android:scrollHorizontally="true"
+	            android:layout_marginTop="8dp"
+	            android:layout_marginBottom="2dp"
 	            android:paddingLeft="5dip"
 	            android:layout_alignParentLeft="true"
 	            android:layout_centerVertical="true"
-	            android:textSize="10pt"
+	            android:textSize="8pt"
+	            android:textColor="@color/dark_gray"
 	            android:singleLine="true"
-	            android:text="TextView" />
+	            android:text="地址" />
         
         </RelativeLayout>
       </LinearLayout>
