--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -39,4 +39,8 @@
   <color name="viewfinder_frame">#ff000000</color>
   <color name="viewfinder_laser">#ffff0000</color>
   <color name="viewfinder_mask">#60000000</color>
+  <color name="white">#ffffffff</color>
+  <color name="black">#ff000000</color>
+  <color name="gray">#ffd8d8d8</color>
+  <color name="dark_gray">#ff777777</color>
 </resources>
